<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF3E0"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/email"
                android:paddingTop="10dp"
                android:onClick="onBackClick"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/sign_in"
                android:paddingTop="10dp"
                android:src="@drawable/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:startIconTint="#848484"
                app:passwordToggleTint="#848484"
                app:startIconDrawable="@drawable/person">

                <EditText
                    android:id="@+id/loginEmailEditText"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="14dp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="#848484"
                    android:textSize="14sp"

                    tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:passwordToggleEnabled="true"
                app:startIconTint="#848484"
                app:passwordToggleTint="#848484"

                app:startIconDrawable="@drawable/lock">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="14dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextContrastCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/Orange"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/forgetPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:minHeight="48dp"
                android:onClick="onForgetPasswordClick"
                android:text="@string/forget_password"
                android:textColor="#616161"
                android:textSize="12sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#616161"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:textColor="#616161"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#616161"/>
            </LinearLayout>
            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInWithGoogleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_with_google"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:backgroundTint="@color/Orange"
                app:iconTint="@color/white"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

